add services email

--- a/Notes.Api/appsettings.json
+++ b/Notes.Api/appsettings.json
@@ -8,6 +8,23 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433; User ID=SA; Password=!1PasswordBackEnd.; Initial Catalog=notesDB; MultipleActiveResultSets=true; TrustServerCertificate=true;"
   },
+  "Bus": {
+    "RabbitMQ": {
+      "Hostname": "localhost",
+      "Credentials": {
+        "UserName": "fabianrzs",
+        "Password": "0000"
+      },
+      "Publisher": {
+        "DomainExchange": "request.exchange",
+        "IntegrationExchange": "request.exchange"
+      },
+      "Consumer": {
+        "DomainQueue": "request.queue",
+        "IntegrationQueue": "request.queue"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "AllowedOrigins": "http://localhost:3000"
 }
