--- a/Notes.Infrastructure/Notes.Infrastructure.csproj
+++ b/Notes.Infrastructure/Notes.Infrastructure.csproj
@@ -21,6 +21,8 @@
 	  <PackageReference Include="Microsoft.OpenApi" Version="1.6.14" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <PackageReference Include="Common.Communication.RabbitMQ" Version="1.1.1" />
+	  <PackageReference Include="Scrutor" Version="4.2.2" />
   </ItemGroup>
 
   <ItemGroup>
