--- a/Notes.Api/appsettings.json
+++ b/Notes.Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AppName": "Notes-App",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,14 +7,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433; User ID=SA; Password=!1PasswordBackEnd.; Initial Catalog=notesDB; MultipleActiveResultSets=true; TrustServerCertificate=true;"
+    "DefaultConnection": "Server=notes-server-sql,1433; User ID=SA; Password=!1PasswordBackEnd.; Initial Catalog=notesDB; MultipleActiveResultSets=true; TrustServerCertificate=true;"
   },
   "Bus": {
     "RabbitMQ": {
-      "Hostname": "localhost",
+      "Hostname": "notes-server-rabbit",
       "Credentials": {
-        "UserName": "fabianrzs",
-        "Password": "0000"
+        "UserName": "notes_core_user",
+        "Password": "password_core"
       },
       "Publisher": {
         "DomainExchange": "request.exchange",
